--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: ruby
 rvm:
-  - 1.9.2
   - 1.9.3
+  - 2.0.0
+  - ruby-head
   - jruby-19mode
   - jruby-head
   - rbx-19mode
-  - ruby-head
 script: "bundle exec rspec spec"
 matrix:
   allow_failures:
+    - rvm: jruby-head
     - rvm: ruby-head
