--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,13 @@ rvm:
   - 2.0.0
   - 2.1.0
   - ruby-head
-  - jruby-19mode
+  - jruby
   - jruby-head
   - rbx
+  - rbx-head
 script: "bundle exec rspec spec"
 matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
-    - rvm: rbx
+    - rvm: rbx-head
