--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,11 @@
 language: ruby
 rvm:
-  - 2.0.0
-  - 2.1.0
-  - ruby-head
+  - 2.0
+  - 2.1
+  - 2.2
   - jruby
-  - jruby-head
   - rbx-2
-  - rbx-head
 script: "bundle exec rspec spec"
 matrix:
   allow_failures:
-    - rvm: ruby-head
-    - rvm: jruby-head
-    - rvm: rbx-head
+    - rvm: rbx-2
