Allow jruby failures.
This already fails on master, and has for months.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,13 @@ rvm:
   - 2.2
   - jruby
   - rbx-2
+  
 script: "bundle exec rspec spec"
+
 before_install:
   - gem install bundler
+
 matrix:
   allow_failures:
+    - rvm: jruby
     - rvm: rbx-2
