Fix .travis.yml typo
We want to test the new ruby against the old sidekiq.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ matrix:
   include:
     - rvm: 2.0
       gemfile: gemfiles/ruby20.gemfile
-    - rmv: 2.4
+    - rvm: 2.4
       gemfile: gemfiles/sidekiq4.gemfile
