--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,14 @@ rvm:
   - 2.2
   - 2.3
   - 2.4.1
+  - 2.5.1
   - jruby
   - rbx-2
+
+gemfile:
+  - gemfiles/ruby20.gemfile
+  - gemfiles/sidekiq4.gemfile
+  - gemfiles/upgrade.gemfile
 
 script: "bundle exec rspec spec"
 
@@ -15,8 +21,3 @@ matrix:
   allow_failures:
     - rvm: jruby
     - rvm: rbx-2
-  include:
-    - rvm: 2.0
-      gemfile: gemfiles/ruby20.gemfile
-    - rvm: 2.4
-      gemfile: gemfiles/sidekiq4.gemfile
