--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ gemfile:
 script: "bundle exec rspec spec"
 
 before_install:
-  - gem install bundler
+  - gem install bundler:1.17.3
 
 matrix:
   allow_failures:
