--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 # For more information see: https://github.com/marketplace/actions/setup-ruby-jruby-and-truffleruby
 
 name: main build
-run-name: ${{ github.actor }} 🚀
+run-name: ${{ github.actor }} 🚀 ${{github.ref_name}}
 on: [push]
 
 permissions:
@@ -14,12 +14,17 @@ jobs:
     strategy:
       matrix:
         ruby-version:
-          - '2.6'
+          - '2.7'
+          - '3.0'
+          - '3.1'
+          - '3.2'
         gemfile:
           - 'Gemfile'
-          - 'gemfiles/sidekiq52_rails42.gemfile'
-          - 'gemfiles/sidekiq52_rails52.gemfile'
-          - 'gemfiles/sidekiq60_rails52.gemfile'
+          - 'gemfiles/sidekiq5_rails6.gemfile'
+          - 'gemfiles/sidekiq6_4_rails6.gemfile'
+          - 'gemfiles/sidekiq6_4_rails7.gemfile'
+          - 'gemfiles/sidekiq6_5_rails6.gemfile'
+          - 'gemfiles/sidekiq6_5_rails7.gemfile'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/${{ matrix.gemfile }}
     steps:
