Fix specs for Sidekiq 7
Clarified changlog; removed be_delayed from README

Revert "Clarified changlog; removed be_delayed from README"

This reverts commit a32389c4a0141f22581010645e8ceb00180e0ec2.

Revert "Support Sidekiq 7"

This reverts commit c464e13ee1960318d5a68ce1595517f7b15a4c75.

Support Sidekiq 7 in the dev environment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
           - 'gemfiles/sidekiq6_4_rails7.gemfile'
           - 'gemfiles/sidekiq6_5_rails6.gemfile'
           - 'gemfiles/sidekiq6_5_rails7.gemfile'
+          - 'gemfiles/sidekiq7_rails7.gemfile'
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/${{ matrix.gemfile }}
     steps:
