Add triggers to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,11 @@
 
 name: main build
 run-name: ${{ github.actor }} 🚀 ${{github.ref_name}}
-on: [push]
+on:
+  push:
+  pull_request:
+  schedule:
+    - cron: '30 15 * * *'
 
 permissions:
   contents: read
