--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,3 +46,5 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Run tests
         run: bundle exec rspec spec
+      - name: Check for implicitly loaded dependencies # See #204
+        run: bundle exec ruby -I lib -r rspec-sidekiq -e 1
