--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,6 @@ jobs:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Run tests
-        run: bundle exec rspec spec
+        run: bundle exec rspec
       - name: Check for implicitly loaded dependencies # See #204
         run: bundle exec ruby ./lib/rspec-sidekiq.rb
