--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     strategy:
       matrix:
         ruby-version:
+          - '3.4'
           - '3.3'
           - '3.2'
           - '3.1'
@@ -35,6 +36,12 @@ jobs:
           - 'gemfiles/sidekiq7_rails7.gemfile'
           - 'gemfiles/sidekiq8_rails8.gemfile'
         exclude:
+          - ruby-version: '3.4'
+            gemfile: 'gemfiles/sidekiq5_rails6.gemfile'
+          - ruby-version: '3.4'
+            gemfile: 'gemfiles/sidekiq6_4_rails6.gemfile'
+          - ruby-version: '3.4'
+            gemfile: 'gemfiles/sidekiq6_5_rails6.gemfile'
           - ruby-version: '3.1'
             gemfile: 'gemfiles/sidekiq8_rails8.gemfile'
           - ruby-version: '3.0'
